tests/fixtures/invalid-closures/recursive-closure.mlg
func main() {
    recurse := func(value int) int {
        return recurse(value)
    }
    print(recurse(1))
}
